overflow fix

--- a/src/blocks/player/__container/player__container.css
+++ b/src/blocks/player/__container/player__container.css
@@ -2,7 +2,7 @@
     grid-area: more;
     display: flex;
     height: 104px;
-    overflow: scroll;
+    overflow-y: scroll;
     margin-top: 30px;
     margin-bottom: 0;
 }
